# MobilityDB

./: .codacy.yml  .gitignore  .gitmodules  .meos-sync-tag  .prospector.yaml  .prospector.yml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  PGPOINTCLOUD_UPSTREAM_PR_DRAFT.md  PHASE_8B_PR_DRAFTS.md  PHASE_8_HANDOFF.md  POINTCLOUD.md  README.md  globals.c  other_globals.c
build-dbg/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  meos_export.h  meos_internal_export.h
build-json/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  meos.pc  meos_internal_export.h  meos_json_export.h
build-meos/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  meos_geo_export.h
build-nojson/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  meos_geo_export.h
build-pg/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt  mobilitydb--1.4.0.sql  mobilitydb_datagen--1.4.0.sql
build-pgnojson/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  mobilitydb--1.4.0.sql  mobilitydb.control  mobilitydb_datagen--1.4.0.sql  mobilitydb_datagen.control
cmake/: ConfigurePgConfig.cmake  FindGSL.cmake
doc/: box_types.xml  lax.txt  mobilitydb-manual.xml  reference.xml  set_span_types.xml  temporal_alpha.xml  temporal_circular_buffers.xml  temporal_h3_index.xml  temporal_jsonb.xml  temporal_network_points.xml  temporal_parquet.xml  temporal_pointcloud.xml  temporal_poses.xml  temporal_rigid_geom.xml  temporal_rigid_geometries.xml  temporal_spatial_p1.xml  temporal_spatial_p2.xml  temporal_types_analytics.xml  temporal_types_p1.xml  temporal_types_p2.xml
doxygen/: Doxyfile
include/: temporal.h
master/: index.html
master-dev/: error_8c_a1daf24bc5c266ef8915ceddd3843f1fb.html  group__meos__box__accessor_gab485983250b3b2c91cdd0392e14f8114.html  group__meos__geo__base__inout_ga6a9bdabd59ba858f695b275a43542268.html  group__meos__geo__base__rel_ga92ee6e2f8934c05d5c25127ea0213f8b.html  group__meos__geo__box__accessor_ga4e61116804f996fea578ebf2c84d2dfa.html  group__meos__internal__box__transf_ga0157bdfb41bee86307d79fa4a0f2b204.html  group__meos__internal__geo_ga28c9d7e1b6cb5456e301b5630d65814a.html  group__meos__internal__setspan__inout_ga23ad871526e158655acd518ae7e08a3b.html  (+34 more)
meos/pgtypes/: CMakeLists.txt  pgtypes.h
meos/pgtypes/utils/: json.c  jsonb.c  jsonb_op.c  jsonfuncs.c  timestamp.c
meos/src/rgeo/: CMakeLists.txt  lwgeom_utils.c  planar_graph.c  quaternion.c  trgeo.c  trgeo_aggfuncs.c  trgeo_boxops.c  trgeo_compops.c  trgeo_distance.c  trgeo_inst.c  trgeo_parser.c  trgeo_seq.c  trgeo_seqset.c  trgeo_spatialfuncs.c  trgeo_spatialrels.c  trgeo_transform.c  trgeo_utils.c  trgeo_vclip.c  trgeometry.c  trgeometry_boxops.c  trgeometry_compops.c  trgeometry_distance.c  trgeometry_inst.c  trgeometry_parser.c  trgeometry_seq.c  trgeometry_seqset.c  trgeometry_utils.c  trgeometry_vclip.c
mobilitydb/src/point/: CMakeLists.txt  projection_gk.c  stbox.c  tpoint.c  tpoint_aggfuncs.c  tpoint_analytics.c  tpoint_analyze.c  tpoint_boxops.c  tpoint_compops.c  tpoint_datagen.c  tpoint_distance.c  tpoint_gist.c  tpoint_inout.c  tpoint_posops.c  tpoint_selfuncs.c  tpoint_spatialfuncs.c  tpoint_spatialrels.c  tpoint_spgist.c  tpoint_tempspatialrels.c  tpoint_tile.c  tspatial_analyze.c  tspatial_posops.c  type_srid.c
pgtypes/: CMakeLists.txt  c.h  pg_config.h.in  pg_json.h  pgtime.h  pgtypes.h  port.h
pgtypes/catalog/: pg_conversion.c
pgtypes/common/: jsonapi.c  pgfnames.c  stringinfo.c  unicode_norm.c
pgtypes/nodes/: CMakeLists.txt  nodeFuncs.c  nodeFuncs.h  nodes.h  pg_list.h
pgtypes/parser/: scansup.c
pgtypes/port/: CMakeLists.txt  chklocale.c  open.c  pgsleep.c  strerror.c  win32error.c
pgtypes/storage/: fd.c
pgtypes/timezone/: findtimezone.c  localtime.c  pgtz.c
pgtypes/utils/: CMakeLists.txt  bool.c  builtins.h  date.c  datetime.c  datetime.h  datum.c  dynahash.c  float.c  float.h  format_type.c  formatting.c  formatting.h  int8.c  json.c  jsonb.c  jsonb.h  jsonb_op.c  jsonb_util.c  jsonfuncs.c  jsonpath.c  jsonpath.h  jsonpath_exec.c  numeric.c  numeric.h  numutils.c  pg_locale.c  pg_locale_builtin.c  pg_locale_icu.c  pg_locale_libc.c  regexp.c  timestamp.c  varlena.c
pgtypes/utils/mb/: mbutils.c
pgtypes/utils/mb/conversion_procs/: utf8_and_iso8859.c  utf8_and_win.c
postgres/: CMakeLists.txt  CMakeLists_new.txt  c.h  pg_bool.h  pg_date.h  pg_float.h  pg_int.h  pg_interval.h  pg_json.h  pg_text.h  pg_time.h  pg_timestamp.h  postgres.h  postgres_types.h
postgres/access/: hashfunc.c
postgres/catalog/: pg_collation.c  pg_collation.h
postgres/common/: CMakeLists.txt  encnames.c  f2s.c  int.h  jsonapi.c  jsonapi.h  pgfnames.c  string.c  string.h  stringinfo.c  wchar.c
postgres/lib/: simplehash.h
postgres/parser/: CMakeLists.txt  scansup.c
postgres/port/: CMakeLists.txt
postgres/timezone/: CMakeLists.txt  findtimezone.c  pgtz.c
postgres/utils/: CMakeLists.txt  bool.c  builtins.h  date.c  date.h  datetime.c  dynahash.c  float.c  float.h  format_type.c  formatting.c  hsearch.h  int.c  int8.c  json.c  jsonb.c  jsonb.h  jsonb_op.c  jsonb_util.c  jsonfuncs.c  jsonfuncs.h  mbutils.c  memutils.h  numeric.c  numeric.h  numutils.c  pg_locale.c  pg_locale.h  pg_locale_builtin.c  pg_locale_icu.c  pg_locale_libc.c  timestamp.c  timestamp.h  varlena.c  varlena.h
postgres/utils/mb/: conversion_procs.h  mbutils.c
postgres/utils/mb/conversion_procs/: CMakeLists.txt  big5.c  cyrillic_and_mic.c  euc2004_sjis2004.c  euc_cn_and_mic.c  euc_jp_and_sjis.c  euc_kr_and_mic.c  euc_tw_and_big5.c  latin2_and_win1250.c  latin_and_mic.c  utf8_and_big5.c  utf8_and_cyrillic.c  utf8_and_euc2004.c  utf8_and_euc_cn.c  utf8_and_euc_jp.c  utf8_and_euc_kr.c  utf8_and_euc_tw.c  utf8_and_gb18030.c  utf8_and_gbk.c  utf8_and_iso8859.c  utf8_and_iso8859_1.c  utf8_and_johab.c  utf8_and_sjis.c  utf8_and_sjis2004.c  utf8_and_uhc.c  utf8_and_win.c
(+1850 files in other folders)
