include_directories("access")
include_directories("catalog")
include_directories("common")
include_directories("datatype")
include_directories("lib")
include_directories("mb")
include_directories("nodes")
include_directories("parser")
include_directories("port")
include_directories("timezone")
include_directories("utils")

add_subdirectory("access")
add_subdirectory("common")
add_subdirectory("parser")
add_subdirectory("port")
add_subdirectory("timezone")
add_subdirectory("utils")
