add_library(pg_point OBJECT
  projection_gk.c
  stbox.c
  tpoint.c
  tpoint_aggfuncs.c
  tpoint_analytics.c
  tpoint_boxops.c
  tpoint_compops.c
  tpoint_datagen.c
  tpoint_distance.c
  tpoint_gist.c
  tpoint_inout.c
  tpoint_selfuncs.c
  tpoint_spatialfuncs.c
  tpoint_spatialrels.c
  tpoint_spgist.c
  tpoint_tempspatialrels.c
  tpoint_tile.c
  tspatial_posops.c
  tspatial_analyze.c
  type_srid.c
  )
